Spacing fix

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -57,7 +57,6 @@ h1:hover {
 	padding: 15px 20px;
   background: #0064B4;
   border-right: 4px solid rgba(0,0,0,0.2);
-  margin: 0;
   transition: background .25s ease-out;
 }
 
